# pyfast-ui

./: .gitignore  README.md  justfile  mkdocs.yml  pyproject.toml  test.py
.github/workflows/: release.yml
docs/: index.md  usage.md
docs/api/: groups.md  histogram_window.md  main_gui.md  movie_window.md
src/pyfast_ui/: __init__.py  batch_dialog.py  channel_select_group.py  config.py  creep_group.py  custom_widgets.py  drift_group.py  export_group.py  fft_filters_group.py  histogram_window.py  image_correction.py  image_filters.py  import_group.py  main.py  modify_group.py  movie_window.py  phase_group.py  workers.py
src/pyfast_ui/groups/: creep_group.py  export_group.py  fft_filters_group.py  image_correction.py  image_filters.py  modify_group.py  phase_group.py
src/pyfast_ui/pyfast_re/: channels.py  creep.py  data_mode.py  drift.py  export.py  fast_movie.py  fft_filter.py  frame_corrections.py  interpolation.py  phase.py  tqdm_logging.py
