[project]
name = "pyfast-ui"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "matkrin", email = "matkrin@protonmail.com" }
]
dependencies = [
    "pyside6>=6.8.0.2",
    "matplotlib>=3.9.2",
    "pyfastspm>=1.0.5",
    "setuptools>=75.5.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pyfast_ui"]
