[project]
name = "pyfast-ui"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "matkrin", email = "matkrin@protonmail.com" }
]
dependencies = [
    "h5py>=3.12.1",
    "matplotlib>=3.9.2",
    "numpy>=2.0.2",
    "pillow>=11.1.0",
    "pydantic>=2.10.6",
    "pyfastspm",
    "pyside6>=6.8.1,!=6.8.1.1",
    "pystackreg>=0.2.8",
    "scikit-image>=0.24.0",
    "setuptools>=75.5.0",
    "tomli-w>=1.2.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pyfast_ui"]

[tool.uv.sources]
pyfastspm = { git = "https://gitlab.com/fastspm/pyfastspm", branch = "tum-latest" }

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.4",
    "mkdocstrings-python>=1.15.0",
    "pyinstaller>=6.11.1",
]
